--- a/package.json
+++ b/package.json
@@ -27,10 +27,13 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@tanstack/react-query": "^5.34.2",
+    "@tanstack/react-router": "^1.31.20",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "embla-carousel-react": "^8.0.4",
-    "next-themes": "^0.3.0",
+    "lucide-react": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
@@ -42,6 +45,8 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.7.2",
+    "@tanstack/router-devtools": "^1.31.20",
+    "@tanstack/router-vite-plugin": "^1.31.18",
     "@types/node": "^20.12.8",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
